# Comptext_v7

./: LICENSE  README.md
Comptext-Daimler-Experiment-/: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AUDIT_REPORT.md  AUTO_RESEARCH.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  LICENSE  Makefile  PROJECT_WIKI.md  README.md  SECURITY.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE.md  api.py  config.py  coverage.json  docker-compose.yml  executive_audit_report.md  locustfile.py  pre_commit_summary.txt  pyproject.toml  render.yaml  requirements.txt  setup.sh  status_report.md  validation_report.json  verification_audit_report.md
Comptext-Daimler-Experiment-/exports/: login_screen.html
Comptext-Daimler-Experiment-/scripts/: auto_validator.py  comprehensive_benchmark.py  daimler_core_audit.py  final_audit.py  industrial_stress_test.py  kvtc_efficiency_test.py  kvtc_integrity_research.py  monitor_benchmarks.py  profile_kvtc.py  real_model_e2e.py  stress_test.py
Comptext-Daimler-Experiment-/showcase/: index.html  mo360_shift_filter.py  package-lock.json  package.json  supply_chain_dedup.py  tailwind.config.js  xentry_optimizer.py
Comptext-Daimler-Experiment-/tests/: test_agent_loop.py  test_analysis_agent.py  test_analysis_error_handling.py  test_api_batch.py  test_api_v6.py  test_decision_engine.py  test_intake_agent.py  test_kvtc.py  test_memory.py  test_obd_database.py  test_performance.py  test_result_cache.py  test_showcase_scenarios.py  test_stats.py  test_telemetry.py  test_triage_agent.py  test_v6_layers.py
(+55 files in other folders)
