[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "comptext-daimler"
version     = "0.2.0"
description = "Industrial AI token compression pipeline for Daimler Buses process automation"
readme      = "README.md"
license     = { text = "Apache-2.0" }
requires-python = ">=3.11"

dependencies = [
    "requests>=2.31.0",
    "anthropic>=0.28.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
comptext-api = "api:main"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version         = "3.11"
strict                 = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit   = ["tests/*", "api.py"]
